2009-01-26  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* nl.po: Dutch translation updated by Wouter Bolsterlee.

2009-01-26  Claude Paroz  <claude@2xlibre.net>

	* POTFILES.in: Update path of moved file.

2009-01-26  Daniel Nylander <po@danielnylander.se>

	* sv.po: Updated Swedish translation.

2009-01-20  Aaron Bockover  <abock@gnome.org>

	* POTFILES.in: Updated

2009-01-18 Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* ru.po: Updated Russian translation.

2009-01-18 Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es.po: Updated Spanish translation by Benjamin Valero.

2009-01-02 Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es.po: Updated Spanish translation by Benjamin Valero.

2008-12-27  Jorge Gonzalez  <jorgegonz@svn.gnome.org> 

	* es.po: Updated Spanish translation by Benjamin Valero.

2008-12-12  Gabor Kelemen  <kelemeng@gnome.hu>

	* hu.po: Translation updated.

2008-11-20 Og Maciel <ogmaciel@gnome.org>

	* pt_BR.po: Updated Brazilian Portuguese translation by
	Fábio Nogueira.

2008-11-20  Daniel Nylander <po@danielnylander.se>

	* sv.po: Updated Swedish translation.

2008-11-20  Tomasz Dominikowski  <tdominikowski@aviary.pl>

	* pl.po: Updated Polish translation

2008-11-18  Lasse Bang Mikkelsen  <lbm@lbm.dk>

	* da.po: Updated Danish translation.

2008-11-18  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* nl.po: Dutch translation updated by Wouter Bolsterlee.

2008-11-16  Gintautas Miliauskas  <gintas@akl.lt>

	* lt.po: Updated Lithuanian translation.

2008-11-14 Og Maciel <ogmaciel@gnome.org>

	* pt_BR.po: Updated Brazilian Portuguese translation by
	Og Maciel.

2008-11-11  Luca Ferretti  <elle.uca@libero.it>

	* it.po: Updated Italian translation by Gianvito Cavasoli.

2008-11-08  Mario Blättermann  <mariobl@svn.gnome.org>

	* de.po: Updated German Translation.

2008-11-08  Jochen Skulj  <jochen@jochenskulj.de>

	* de.po: Updated German Translation.

2008-11-08  Alexandre Prokoudine  <alexandre.prokoudine@gmail.com>
