@@ -1,3 +1,7 @@
+2009-01-26  Bertrand Lorentz  <bertrand.lorentz@gmail.com>
+
+	* POTFILES.in: Add missing files.
+
 2009-01-26  Wouter Bolsterlee  <wbolster@svn.gnome.org>
 
 	* nl.po: Dutch translation updated by Wouter Bolsterlee.
